add profile management and user search